Fixed menu padding and align icons

--- a/source/assets/stylesheets/locastyle/modules/_sidebar.sass
+++ b/source/assets/stylesheets/locastyle/modules/_sidebar.sass
@@ -106,7 +106,7 @@
       font-weight: 600
       line-height: 1.3
       text-decoration: none
-      padding: 20px 20px 20px 55px
+      padding: 20px 20px 20px 59px
       position: relative
       -webkit-font-smoothing: antialiased
       -moz-osx-font-smoothing: grayscale
@@ -117,7 +117,7 @@
         position: absolute
         top: 50%
         margin-top: -10px
-        left: 15px
+        left: 19px
 
       &:focus,
       &:hover
